[package]
name = "pymut"
version = "0.1.0"
authors = ["Chuck Rai <cprai@sfu.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rustpython-parser = "0.1.1"
#rustpython-compiler = "0.1.1"
#rustpython-vm = "0.1.1"
rustpython-parser = { git = "https://github.com/cprai/RustPython", branch = "patch-1" }
rustpython-compiler = { git = "https://github.com/cprai/RustPython", branch = "patch-1" }
rustpython-vm = { git = "https://github.com/cprai/RustPython", branch = "patch-1" }
serde = "1.0"
serde_json = "1.0"
num-bigint = "0.2"
rusqlite = "0.20.0"
parse-display = "0.1"
sha-1 = "0.8.1"
hex = "0.4.0"
clap = { git = "https://github.com/clap-rs/clap", branch = "master" }
diesel = { version = "1.4.0", features = ["sqlite", "numeric"] }